[#170800281] Fix dates alignment

--- a/templates/css/new-announcement.css
+++ b/templates/css/new-announcement.css
@@ -40,8 +40,13 @@ input {
     margin-bottom: 1rem;
 }
 
+.display-date {
+    display: flex;
+    flex-direction: column;
+}
+
 #endDate, #startDate {
-    width: 60%;
+    width: 45%;
 }
 
 #submit {
@@ -64,8 +69,25 @@ input {
 
 @media only screen and (min-width: 750px) {
     .container {
-        width: 60%;
+        width: 80%;
     }
+
+    .display-date {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .form {
+        padding: 1rem 2rem;
+        width: 90%;
+        margin: 0.5rem auto;
+    }
+
+    #endDate, #startDate {
+        width: 52%;
+    }
+
 }
 
 @media only screen and (min-width: 1000px) {
